--- a/tests/resources/images.yaml
+++ b/tests/resources/images.yaml
@@ -5,23 +5,23 @@ image-01.jpeg:
   date_time: 2012:05:01 01:00:00
   event_name: First event
 
-image-02.jpeg:
+image-02.jpg:
   md5sum: ba2ea285d30e577ec53adedce7709745
   expected_path: 2012/2012-05/2012-05-02-02-00-00.jpeg
   date_time: 2012:05:02 02:00:00
   event_name: Second event
 
-image-03.jpeg:
-  md5sum: 069cbc3a483948cd562ad08621275d42
-  expected_path: 2013/2013-02/2013-02-01-03-00-00.jpeg
+image-03.tif:
+  md5sum: 8a8a3d5dbac775f16f5bbcfa57546ca0
+  expected_path: 2013/2013-02/2013-02-01-03-00-00.tiff
   date_time: 2013:02:01 03:00:00
-  event_name:
+  event_name: 
 
 image-04.jpeg:
   md5sum: ae7ebcf0c0cd1fbe942991f90475f3b2
   expected_path: 2013/2013-03/2013-03-01-04-00-00.jpeg
   date_time: 2013:03:01 04:00:00
-  event_name:
+  event_name: 
 
 image-05.jpeg:
   md5sum: cb3f4a7c1b9a2340a464770f1a685626
@@ -29,7 +29,7 @@ image-05.jpeg:
   date_time: 2012:05:01 05:00:00
   event_name: First event
 
-image-06.jpeg:
+image-06.JPG:
   md5sum: 8b57bfbee5d20913e30e3ae6eeff06bd
   expected_path: 2015/2015-11/2015-11-23-06-00-00.jpeg
   date_time: 2015:11:23 06:00:00
