Support for more time sources!
 - Support for filename based date/time
 - Support for mp4 and 3gp files (using exiftool if available)
 - Suppression of duplicate files
 - Correct handling of filename collisions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: python
 python:
-- '2.7'
+  - '2.7'
+
+addons:
+  apt:
+    packages:
+    - libimage-exiftool-perl
+
 install:
-- pip install tox
+  - pip install tox
+
 script: tox -r
 deploy:
   provider: pypi
